# cs-a-odisseia-de-um-prato

./: .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  create_pause_assets.py  pyproject.toml
assets/icons/: potato_icon.icns
assets/tilemaps/: a_odisseia_de_um_prato.tiled-session  map_1.tmx  map_2.tmx  map_3.tmx  map_4.tmx  map_5.tmx  map_6.tmx  map_7.tmx  map_8.tmx  tileset-duto.tsx  tileset-saida.tsx  world_tileset.tsx
assets/tilemaps/old/: a_odisseia_de_um_prato.tiled-session  map_1.tmx
assets/tilemaps/old_2/: map_1.tmx  map_2.tmx  tile-cozinha-esgoto.tsx  tile-cozinha-esgoto.tsx:Zone.Identifier  tile-esgoto-cozinha.tsx
src/app/: ioc_container.py  main.py
src/app/components/: animation_component.py  input_handler.py  movement.py  render.py  transform.py
src/app/config/: config.py  log_config.py
src/app/core/: animation_state.py  animator.py  collision_system.py  end_game_state.py  game.py  game_object.py  game_state.py  level.py  level_slider.py  observer.py  physics.py  tile.py  tilemap.py  tilemap_group.py
src/app/entities/: background_tile.py  idle_character.py  jumping_character.py  potato.py  tile.py
src/app/levels/: level.py  level_1.py  level_10.py  level_2.py  level_3.py  level_4.py  level_5.py  level_6.py  level_7.py  level_8.py  level_9.py
src/app/pplay/: animation.py  collision.py  gameimage.py  gameobject.py  keyboard.py  mouse.py  sound.py  sprite.py  window.py
src/app/seedwork/: path_helper.py  tilemap_loader.py
src/app/ui/: __init__.py  altitude_hud.py  main_menu.py  menu_button.py  (+3 more)
src/tests/: test_main.py
(+11 files in other folders)
